--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/reset.css"> -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
-    <title>React App</title>
+    <title>Todo list</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
